--- a/css/cbspeeches.webflow.css
+++ b/css/cbspeeches.webflow.css
@@ -2494,6 +2494,10 @@ figcaption {
   color: #181818;
 }
 
+.rawtabs {
+  opacity: 1;
+}
+
 .section-6 {
   min-height: 120px;
   background-color: #181818;
