simple download button for csv download

--- a/css/cbspeeches.webflow.css
+++ b/css/cbspeeches.webflow.css
@@ -3177,3 +3177,16 @@ figcaption {
     grid-column-end: span 1;
   }
 }
+.btn {
+  background-color: DodgerBlue;
+  border: none;
+  color: white;
+  padding: 12px 30px;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+/* Darker background on mouse-over */
+.btn:hover {
+  background-color: RoyalBlue;
+}
